--- a/fuvest/index.html
+++ b/fuvest/index.html
@@ -9,7 +9,7 @@
 	<body>
 
 		<div class="container">
-			<h1>PASSAR NA USP</h1>
+			<h1>FUVEST</h1>
             <a href="Matematica_FUVEST.pdf">Matematica_FUVEST.pdf</a></br>
             <a href="Fisica_FUVEST.pdf">Fisica_FUVEST.pdf</a></br>
             <a href="Quimica_FUVEST.pdf">Quimica_FUVEST.pdf</a></br>
