--- a/perdido-na-disney.com/index.html
+++ b/perdido-na-disney.com/index.html
@@ -33,7 +33,7 @@
 			}
 		</style>
 		<script>
-			var countDownDate = new Date("Nov 25, 2019 13:00:00").getTime();
+			var countDownDate = new Date("Jan 06, 2019 13:00:00").getTime();
 
 			var x = setInterval(function() {
 				var now = new Date().getTime();
@@ -50,7 +50,7 @@
 
 				if (distance < 0) {
 					clearInterval(x);
-					document.getElementById("demo").innerHTML = "EXPIRED";
+					document.getElementById("demo").innerHTML = "ACABOU";
 				}
 			}, 100);
 		</script>
