--- a/jogos_merda/cookie_clicker/index.html
+++ b/jogos_merda/cookie_clicker/index.html
@@ -36,7 +36,7 @@
 				
 				<div class="upgrade" id="industria">
 					<button id="up-industria" class="evoluir" type="button">$3000</button>
-					<span class="nome-eve">Fazenda: <span id="up-industria-level">0</span></span>
+					<span class="nome-eve">Industria: <span id="up-industria-level">0</span></span>
 				</div>
 			</div>
 		</div>
